# cgar

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/boolean/: batching.rs  boolean.rs  mod.rs
src/geometry/: aabb.rs  aabb_tree.rs  canonical_edge.rs  edge_edge_intersect.rs  intersection.rs  matrix.rs  mod.rs  plane.rs  point.rs  point_2.rs  point_3.rs  segment.rs  spatial_element.rs  tri_tri_intersect.rs  util.rs  vector.rs  vector_2.rs  vector_3.rs
src/io/: mod.rs  obj.rs  off.rs  stl.rs
src/kernel/: bigrational_kernel.rs  f64_kernel.rs  kernel.rs  mod.rs  orientation.rs  predicates.rs
src/mesh/: basic_types.rs  core.rs  edge_collapse.rs  face.rs  half_edge.rs  intersection_segment.rs  mesh.rs  mod.rs  point_trait.rs  remesh.rs  spatial_hash.rs  topology.rs  triangle.rs  vertex.rs
src/mesh_processing/: batching.rs  boolean.rs  mod.rs  remesh.rs
src/numeric/: ball.rs  cgar_f64.rs  cgar_rational.rs  lazy_exact.rs  mod.rs  scalar.rs
src/operations/: abs.rs  basic_operators.rs  mod.rs  one.rs  pow.rs  round.rs  sqrt.rs  zero.rs
src/operations/triangulation/: delaunay.rs  mod.rs
tests/: aabb.rs  geometry.rs  intersection.rs  kernel.rs  mesh.rs  orientation.rs  predicates.rs  test_aabb.rs  test_edge_collapse.rs  test_geometry.rs  test_intersection.rs  test_kernel.rs  test_mesh.rs  test_mesh_2.rs  test_mesh_3.rs  test_orientation.rs  test_predicates.rs  test_topology.rs  test_tri_tri.rs  tri_tri.rs
