[package]
name = "cgar"
version = "0.1.1"
edition = "2024"
authors = ["Alexandre Severino <youremail@example.com>"]
description = "CGAL-like computational geometry library in Rust"
repository = "https://github.com/rustrogue/cgar"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "mathematics", "graphics"]
keywords = ["geometry", "mesh", "boolean", "delaunay"]

[dependencies]
ahash = "0.8.12"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.1"
rug = "1.24"
smallvec = "1.15.1"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = 'abort'        # Smaller binaries, faster execution
strip = true           # Remove debug symbols
